<resources>
    <string name="app_name">Reserva Local FIA</string>
    <string name="title_activity_local_menu" translatable="false">LocalMenuActivity</string>
    <string name="title_activity_Encargado_menu" translatable="false">EncargadoMenuActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_menu" translatable="false">DetalleReservaLocalMenuActivity</string>
    <string name="title_activity_asignatura_menu" translatable="false">AsignaturaMenuActivity</string>
    <string name="title_activity_carga_academica_menu" translatable="false">CargaAcademicaMenuActivity</string>
    <string name="title_activity_horario_menu" translatable="false">HorarioMenuActivity</string>
    <string name="title_activity_local_insertar" translatable="false">LocalInsertarActivity</string>
    <string name="title_activity_local_eliminar" translatable="false">LocalEliminarActivity</string>
    <string name="title_activity_local_actualizar" translatable="false">LocalActualizarActivity</string>
    <string name="title_activity_local_consultar" translatable="false">LocalConsultarActivity</string>
    <string name="title_activity_encargadoLocal_insertar" translatable="false">EncargadoInsertarActivity</string>
    <string name="title_activity_encargadoLocal_eliminar" translatable="false">EncargadoEliminarActivity</string>
    <string name="title_activity_encargadoLocal_actualizar" translatable="false">EncargadoActualizarActivity</string>
    <string name="title_activity_encargadoLocal_consultar" translatable="false">EncargadoConsultarActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_insertar" translatable="false">DetalleGrupoReservaInsertarActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_eliminar" translatable="false">DetalleGrupoREservaEliminarActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_actualizar" translatable="false">DetalleGrupoREservaActualizarActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_consultar" translatable="false">DetalleGrupoREservaConsultarActivity</string>
    <string name="title_activity_asignatura_insertar" translatable="false">AsignaturaInsertarActivity</string>
    <string name="title_activity_asignatura_eliminar" translatable="false">AsignaturaEliminarActivity</string>
    <string name="title_activity_asignatura_actualizar" translatable="false">AsignaturaActualizarActivity</string>
    <string name="title_activity_asignatura_consultar" translatable="false">AsignaturaConsultarActivity</string>
    <string name="title_activity_carga_academica_insertar" translatable="false">CargaAcademicaInsertarActivity</string>
    <string name="title_activity_carga_academica_eliminar" translatable="false">CargaAcademicaEliminarActivity</string>
    <string name="title_activity_carga_academica_actualizar" translatable="false">CargaAcademicaActualizarActivity</string>
    <string name="title_activity_carga_academica_consultar" translatable="false">CargaAcademicaConsultarActivity</string>
    <string name="title_activity_horario_insertar" translatable="false">HorarioInsertarActivity</string>
    <string name="title_activity_horario_eliminar" translatable="false">HorarioEliminarActivity</string>
    <string name="title_activity_horario_actualizar" translatable="false">HorarioActualizarActivity</string>
    <string name="title_activity_horario_consultar" translatable="false">HorarioConsultarActivity</string>


    <string name="title_activity_ciclo_menu" translatable="false">CicloMenuActivity</string>
    <string name="title_activity_grupo_menu" translatable="false">GrupoMenuActivity</string>
    <string name="title_activity_dias_no_habiles_menu" translatable="false">DiasNoHabilesMenuActivity</string>
    <string name="title_activity_ciclo_insertar" translatable="false">CicloInsertarActivity</string>
    <string name="title_activity_ciclo_eliminar" translatable="false">CicloEliminarActivity</string>
    <string name="title_activity_ciclo_actualizar" translatable="false">CicloActualizarActivity</string>
    <string name="title_activity_ciclo_consultar" translatable="false">CicloConsultarActivity</string>
    <string name="title_activity_grupo_insertar" translatable="false">GrupoInsertarActivity</string>
    <string name="title_activity_grupo_eliminar" translatable="false">GrupoEliminarActivity</string>
    <string name="title_activity_grupo_actualizar" translatable="false">GrupoActualizarActivity</string>
    <string name="title_activity_grupo_consultar" translatable="false">GrupoConsultarActivity</string>
    <string name="title_activity_dias_no_habiles_insertar" translatable="false">DiasNoHabilesInsertarActivity</string>
    <string name="title_activity_dias_no_habiles_eliminar" translatable="false">DiasNoHabilesEliminarActivity</string>
    <string name="title_activity_dias_no_habiles_actualizar" translatable="false">DiasNoHabilesActualizarActivity</string>
    <string name="title_activity_dias_no_habiles_consultar" translatable="false">diasNoHabilesConsultarActivity</string>
    <string name="ciclo_menu" translatable="false">Función a Ejecutar Ciclo</string>
    <string name="grupo_menu" translatable="false">Función a Ejecutar grupo</string>
    <string name="dias_no_habiles_menu" translatable="false">Función a Ejecutar Dias No Habiles</string>
    <string name="local_menu" translatable="false">Función a Ejecutar local</string>
    <string name="encargado_menu" translatable="false">Función a Ejecutar Encargado</string>
    <string name="Detalle_grupo_reserva_menu" translatable="false">Función a Ejecutar detalle </string>
    <string name="CodigoLocal">CodigoLocal</string>
    <string name="IdEncargadoLocal">IdEncargadoLocal</string>
    <string name="IdTipoLocal">IdTipoLocal</string>
    <string name="UbicacionLocal">UbicacionLocal</string>
    <string name="CapacidadLocal">CapacidadLocal</string>
    <string name="idEncargadoLocal">idEncargadoLocal</string>
    <string name="NomEncargadoLocal">NomEncargadoLocal</string>
    <string name="ApeEncargadoLocal">ApeEncargadoLocal</string>
    <string name="IdHorario">codigo_horario</string>
    <string name="IdRolDocente">Codigo Docente</string>
    <string name="codigoAsignaturas">codigo Asignatura</string>
    <string name="codigoCiclo">codigo Ciclo</string>
    <string name="carnetDocentes">carnet Docente</string>
    <string name="IdGrupo">codigo Grupo</string>
    <string name="codigoLocales">codigo local</string>
    <string name="CodigoCiclo">Codigo Ciclo:</string>
    <string name="fechaInicio">Fecha de Inicio</string>
    <string name="fechaFin">Fecha Fin</string>
    <string name="id_rol_docente">ID Rol Docente</string>
    <string name="codigo_asignatura">Codigo Asignatura</string>
    <string name="carnet_docente">Carnte Docente</string>
    <string name="id_grupo">ID Grupo</string>
    <string name="num_max_estudiantes">Numero Maximo de Estudiantes</string>
    <string name="asignatura_menu" translatable="false">Función a Ejecutar Asignatura</string>
    <string name="carga_academica_menu" translatable="false">Función a Ejecutar Carga Academica</string>
    <string name="horario_menu" translatable="false">Función a Ejecutar Horario</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="limpiar">Limpiar</string>
    <string name="opciones">Opciones:</string>
    <string name="codigoAsignatura">Codigo Asignatura</string>
    <string name="nomAsignatura">Nombre Asignatura</string>
    <string name="codigoLocal">Codigo Local</string>
    <string name="codigoEscuela">Codigo Escuela</string>
    <string name="idPriodad">Prioridad</string>
    <string name="id_dias_no_habiles">ID Dias No Habiles:</string>
    <string name="nom_dias_no_habiles">Nombre de Dias No Habiles</string>
    <string name="fecha_desde">Fecha de Inicio de dias no habiles</string>
    <string name="fecha_hasta">Fecha de Fin de dias no habiles</string>
    <string name="idRolDocente">Rol Docente</string>
    <string name="carnetDocente">Carnet Docente</string>
    <string name="idHorario">Horario</string>
    <string name="idDia">Dia</string>
    <string name="horaInicio">Hora Inicio</string>
    <string name="horaFin">Hora Finalizacion</string>
    <string name="idTipoEvento" translatable="false" />
    <string name="nombreEvento" translatable="false" />
    <string name="servicioWeb1">Ingresar Reserva Local</string>
    <string name="servicioWeb2">Consultar Carga Academica x Ciclo</string>
    <string name="servicioWeb3">Servicio Web 3</string>
    <string name="servicioWeb4">Servicio Web 4</string>
    <string name="servicioWeb5">Ingresar Día</string>
    <string name="servicioWeb6">Servicio Web 6</string>
    <string name="servicioWeb7">Ingresar Ciclo</string>
    <string name="servicioWeb8">Servicio Web 8</string>
    <string name="servicioWeb9"> servicio we 9</string>
    <string name="servicio_PHPexterno">Servicio PHP Externo</string>
    <string name="servicio_PHPlocal">Servicio PHP Local</string>
    <string name="servicio_PublicoUES">EISI Publico</string>

    <string name="indicacion_ciclo">Cual ciclo desea consultar la carga academica?</string>
    <string name="formato_ciclo" translatable="false">c-aaaa</string>
    <string name="formato_fecha" translatable="false">dd/mm/aaaa</string>
    <string name="guardar">Guardar</string>
    <string name="iddia">ID Dia</string>
    <string name="nomdia">Nombre Dia</string>
    <string name="formato_dia" translatable="false">D / D-D</string>
    <string name="ingresar_dia">Ingresar Dia</string>

    <string name="text_login">Inicio de Sesión</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contrasenia</string>
    <string name="btn_text_login">Ingresar</string>
    <string name="msg_error_login">El usuario y/o la clave del mismo son invalidos</string>

    <string name="ges_u">Gestión Usuario</string>
    <string name="ges_e">Gestión Escuela</string>
    <string name="ges_tl">Gestión Tipo Local</string>
    <string name="ges_d">Gestión Docente</string>
    <string name="ges_rol">Gestión Rol Docente</string>
    <string name="ges_a">Gestión Asignatura</string>
    <string name="ges_c">Gestión Ciclo</string>
    <string name="ges_dian">Gestión Dias no Habiles</string>
    <string name="ges_te">Gestión Tipo Evento</string>
    <string name="ges_l">Gestión Local</string>
    <string name="ges_enc">Gestion Encargado</string>
    <string name="ges_s">Servicios WEB</string>

    <string name="ges_re">Gestión Reserva Evento</string>
    <string name="ges_dr">Gestión Detalle Reserva</string>
    <string name="ges_g">Gestión Grupo</string>
    <string name="ges_dg">Gestión Detalle Grupo</string>
    <string name="ges_h">Gestión Horario</string>
    <string name="ges_ca">Gestión Carga Academica</string>


</resources>
