<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/codigoAsignatura"/>
        <EditText
            android:id="@+id/editCodigoAsignatura"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/codigoLocal" />
        <EditText
            android:id="@+id/editCodigoLocal"
            android:inputType="text"
            android:maxLength="20" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/codigoEscuela" />
        <EditText
            android:id="@+id/editCodigoEscuela"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nomAsignatura" />
        <EditText
            android:id="@+id/editNomAsignatura"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idPriodad" />
        <EditText
            android:id="@+id/editIdPrioridad"
            android:inputType="number"
            />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarAsignatura"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>