<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:text="@string/iddia" />
        <EditText
            android:id="@+id/editText_iddia"
            android:inputType="text"
            android:maxLength="20" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/nomdia" />
        <EditText
            android:id="@+id/editText_nomdia"
            android:inputType="text"
            android:maxLength="60" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <Button
        android:id="@+id/btn_diaLocal"
        android:onClick="insertarDia"
        android:text="@string/servicio_PHPlocal" />
    <Button
        android:id="@+id/btn_diaExterno"
        android:onClick="insertarDia"
        android:text="@string/servicio_PHPexterno" />
    <Button
        android:id="@+id/btn_diaPublicoUES"
        android:onClick="insertarDia"
        android:text="@string/servicio_PublicoUES" />
    <Button
        android:onClick="limpiarTexto"
        android:text="@string/limpiar" />
</TableLayout>