<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_dias_no_habiles" />
        <EditText
            android:id="@+id/editiddiasnohabiles"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/codigoCiclo" />
        <EditText
            android:id="@+id/editCodciclo"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nom_dias_no_habiles" />
        <EditText
            android:id="@+id/editNomDiasNoHabiles"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/fecha_desde" />
        <EditText
            android:id="@+id/editFechaDesde"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/fecha_hasta" />
        <EditText
            android:id="@+id/editFechaHasta"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarD"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>