<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android= "http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1">
    <TableRow>
        <TextView android:text="@string/idHorario"/>
        <EditText
            android:id="@+id/editIdHorario"
            android:inputType="number"
            android:maxLength="2"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idDia" />
        <EditText
            android:id="@+id/editIdDia"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/horaInicio" />
        <EditText
            android:id="@+id/editHoraInicio"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/horaFin" />
        <EditText
            android:id="@+id/editHoraFin"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <Button android:onClick="actualizarHorario"
            android:text="@string/actualizar"/>
    </TableRow>
    <TableRow>
        <Button android:onClick="limpiarTexto"
            android:text="@string/limpiar"/>
    </TableRow>
</TableLayout>