<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow> <TextView android:text="@string/idEncargadoLocal" />
        <EditText
            android:id="@+id/editIdEncargadoAct"
            android:inputType="text"
            android:maxLength="2" />
    </TableRow> <TableRow> <TextView android:text="@string/NomEncargadoLocal" />
    <EditText
        android:id="@+id/editNomEncargadoAct"
        android:inputType="text"
        android:maxLength="30" />
</TableRow> <TableRow> <TextView android:text="@string/ApeEncargadoLocal" />
    <EditText
        android:id="@+id/editApeEncargadoAct"
        android:inputType="text"
        android:maxLength="30" />
</TableRow>  <TableRow> <Button
    android:onClick="actualizarEncargado"
    android:text="@string/actualizar" />
</TableRow> <TableRow> <Button
    android:onClick="limpiarTexto"
    android:text="@string/limpiar" />
</TableRow>
</TableLayout>