<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/button_A1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_u" />

    <Button
        android:id="@+id/button_A2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_e" />

    <Button
        android:id="@+id/button_A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_tl"
        android:layout_weight="0.06" />
    <Button
        android:id="@+id/button_A4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_d" />

    <Button
        android:id="@+id/button_A5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_rol" />

    <Button
        android:id="@+id/button_A6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_a"
        android:layout_weight="0.06" />
    <Button
        android:id="@+id/button_A7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_c" />

    <Button
        android:id="@+id/button_A8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_dian" />
    <Button
        android:id="@+id/button_A9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_te" />
    <Button
        android:id="@+id/button_A10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_l" />
    <Button
        android:id="@+id/button_A12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="Gestion_Encargado" />
    <Button
        android:id="@+id/button_A11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:onClick="lanzarMenuA"
        android:text="@string/ges_s" />
</LinearLayout>
    </ScrollView>
</RelativeLayout>